port: adapt full refactor to Forge 1.20.1